After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 666379 - adder: fixes to the GstCollectPads2 port - test now passes
adder: fixes to the GstCollectPads2 port - test now passes
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other All
: Normal normal
: 0.10.37
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-12-16 17:39 UTC by Vincent Penquerc'h
Modified: 2012-02-27 09:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
adder: send a flush event before trying to get the stream lock (1.52 KB, patch)
2011-12-16 17:39 UTC, Vincent Penquerc'h
committed Details | Review
adder: use the stream lock where appropriate (2.78 KB, patch)
2011-12-16 17:39 UTC, Vincent Penquerc'h
committed Details | Review
adder: do not send too many flush-stop events (3.24 KB, patch)
2011-12-16 17:39 UTC, Vincent Penquerc'h
none Details | Review
adder: do not send too many flush-stop events (3.27 KB, patch)
2011-12-16 20:15 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2011-12-16 17:39:15 UTC
adder: fixes to the GstCollectPads2 port - test now passes
Comment 1 Vincent Penquerc'h 2011-12-16 17:39:18 UTC
Created attachment 203689 [details] [review]
adder: send a flush event before trying to get the stream lock

This avoids hanging when the streaming thread is busy in _chain
waiting for preroll.
Comment 2 Vincent Penquerc'h 2011-12-16 17:39:20 UTC
Created attachment 203690 [details] [review]
adder: use the stream lock where appropriate

GstCollectPads2 locking was changed from GstCollectPads to use
the stream lock instead of the object lock for those cases, so
change it so here as well to match.
Comment 3 Vincent Penquerc'h 2011-12-16 17:39:23 UTC
Created attachment 203691 [details] [review]
adder: do not send too many flush-stop events

GstCollectPads2 now allows us to override the event function,
so we can withhold flush stop events if none are to be sent.
Comment 4 Mark Nauwelaerts 2011-12-16 19:42:09 UTC
(In reply to comment #3)
> Created an attachment (id=203691) [details] [review]
> adder: do not send too many flush-stop events
> 
> GstCollectPads2 now allows us to override the event function,
> so we can withhold flush stop events if none are to be sent.

All makes sense.

It only remains for this one to also unref the (flush_stop) event if it returns TRUE to collectpads2.
Comment 5 Vincent Penquerc'h 2011-12-16 20:15:48 UTC
Created attachment 203696 [details] [review]
adder: do not send too many flush-stop events

GstCollectPads2 now allows us to override the event function,
so we can withhold flush stop events if none are to be sent.
Comment 6 Vincent Penquerc'h 2011-12-16 20:16:22 UTC
Good catch, thanks a lot for the review, I'll be pushing these now.
Comment 7 Vincent Penquerc'h 2011-12-16 20:19:18 UTC
commit 85c10b0b24a58c1b5ec9aa05ea4ffa98ba99ed76
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Fri Dec 16 17:32:41 2011 +0000

    adder: do not send too many flush-stop events
    
    GstCollectPads2 now allows us to override the event function,
    so we can withhold flush stop events if none are to be sent.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=666379

commit 1da30adc1aeafd36b15b8d083fe2178524619479
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Fri Dec 16 17:31:06 2011 +0000

    adder: use the stream lock where appropriate
    
    GstCollectPads2 locking was changed from GstCollectPads to use
    the stream lock instead of the object lock for those cases, so
    change it so here as well to match.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=666379

commit bcaf5890aa6eb1c4a18b8dd71eacb22aadba0ead
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Fri Dec 16 17:25:10 2011 +0000

    adder: send a flush event before trying to get the stream lock
    
    This avoids hanging when the streaming thread is busy in _chain
    waiting for preroll.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=666379
Comment 8 Tim-Philipp Müller 2011-12-17 23:17:00 UTC
target milestone -> 0.10.37 (not going to cherry-pick the collectpads2 port into the release branch)
Comment 9 Stefan Sauer (gstreamer, gtkdoc dev) 2012-02-27 09:59:13 UTC
commit 85c10b0b24a58c1b5ec9aa05ea4ffa98ba99ed76 breaks adder - it leaves some pads flashing, see bug #670850.